@@ -1,13 +1,12 @@
 package me.scholtes.proceduraldungeons.generator;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Random;
-
 import org.bukkit.Location;
 import org.bukkit.World;
 import org.bukkit.generator.BlockPopulator;
 import org.bukkit.generator.ChunkGenerator;
+
+import java.util.List;
+import java.util.Random;
 
 public class VoidGenerator extends ChunkGenerator {
 
@@ -17,7 +16,7 @@ public class VoidGenerator extends ChunkGenerator {
 	 */
 	
 	public List<BlockPopulator> getDefaultPopulators(World world) {
-		return Arrays.asList(new BlockPopulator[0]);
+		return List.of();
 	}
 	
 	public ChunkData generateChunkData(World world, Random random, int chunkX, int chunkZ, BiomeGrid biome) {
